--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pho.html">Pho Broth Recipe</a>
+    <ul>
+        <li><a href="./recipes/pho.html">Pho</a></li>
+        <li><a href="./recipes/ramen.html">Ramen</a></li>
+        <li><a href="./recipes/springrolls.html">Spring Rolls</a></li>
+    </ul>
 </body>
 </html>
