--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/pho.html">Pho</a></li>
-        <li><a href="./recipes/ramen.html">Ramen</a></li>
+        <li><a href="./recipes/fchicken.html">Fried Chicken</a></li>
         <li><a href="./recipes/springrolls.html">Spring Rolls</a></li>
     </ul>
 </body>
